Additional CSS changes

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,8 +1,8 @@
-.feedback, .leaderboard {
+.survey, .leaderboard {
     margin-bottom: 20px;
     /* height: 400px; */
 }
 
-.feedback {
+.survey {
     height: 400px;
 }
