--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,10 @@
 <div class="header-wrapper">
-  <a href="" class="company-logo"><img src="" alt=""></a>
+  <div (click)="onChangeNav()" class="hamburgerMenu">
+    <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+  </div>
+  <a [routerLink]="dashboard" class="company-logo">
+    <img src="../../../assets/skillamp-logo-large.png" alt="">
+  </a>
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon>
 
   <button mat-button [matMenuTriggerFor]="menu">
