--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 <app-side-nav></app-side-nav>
 <div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
     <app-page-header></app-page-header>
-    <app-breadcrumbs></app-breadcrumbs>    
+    <app-breadcrumb></app-breadcrumb> 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-xl-12">
                 <router-outlet></router-outlet>
             </div>
         </div>
