--- a/src/app/components/review-card/review-card.component.css
+++ b/src/app/components/review-card/review-card.component.css
@@ -2,18 +2,6 @@ a {
     color: inherit;
 }
 
-* {
-    font-size: 13px;
-}
-/* 
-.mat-card-title {
-    font-size: 20px;
-    margin-right: 5px;
-    color: #FDC341;
-    font-weight: bold;
-    display: inline;
-} */
-
 .row {
     display: flex;
     justify-content: flex-start;
@@ -27,12 +15,8 @@ a {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 }
 
-.card-footer {
-    background-color: #E9ECEF;    
-}
-
-.card-header {
-    background-color: #FFFFFF;
+.headerDetails {
+    font-size: 12px;
 }
 
 ::ng-deep .mat-tab-body {
@@ -44,13 +28,11 @@ a {
     margin: 0px !important;
 }
 
-
-
  /* --------------------------------------- */
 
 
 .star {
-    font-size: 1 rem;
+    font-size: 1rem;
     color: #b0c4de;
     position: relative;  
     display: inline-block;
@@ -64,4 +46,51 @@ a {
     display: inline-block;
     overflow: hidden;
     color: #FDC341;
+}
+
+.card {
+    padding: 20px;
+}
+
+.cardHeader {
+    display: flex;
+    margin-bottom: 5px;
+}
+
+.survey {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.rating {
+    line-height: normal;
+    display: inline-block;
+    color: #fff; 
+    padding: 5px 7px 5px 7px;
+    border-radius: 3px;
+    font-weight: 500;
+    font-size: 12px;
+    vertical-align: middle;
+}
+
+.goodScore {
+    background-color: #30A64A;
+}
+
+.averageScore {
+    background-color: #FDC02F;
+}
+
+.poorScore {
+    background-color: #DA3849;
+}
+
+.date {
+    margin-left: auto;
+    font-size: 12px;
+}
+
+.customer {
+    font-size: 12px;
 }
