backend security updates; Dashboard widgets are now dynamic

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
   </div>
   <a [routerLink]="dashboard" class="company-logo">
-    <img src="../../../assets/skillamp-logo-large.png" alt="">
+    <img src="../../../assets/SkillAmp.png" alt="">
   </a>
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon>
 
