--- a/src/app/components/review-card/review-card.component.html
+++ b/src/app/components/review-card/review-card.component.html
@@ -9,6 +9,7 @@
             <span>{{review.rating}}</span>
             <i class="fa fa-star" aria-hidden="true"></i>
           </div>
+          <div class="agentName">Ryan Gray</div>
           <span class="text-muted date">{{review.createdAt | date: 'longDate'}}</span>
         </div>
 
