--- a/src/app/components/surveys/survey.component.html
+++ b/src/app/components/surveys/survey.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid rating-wrapper">
+<div class="container-fluid rating-wrapper" *ngIf="surveysLoaded">
   <div class="row">
     <div class="col-lg-12">
       <app-survey-filters></app-survey-filters>
