--- a/src/app/components/review-card/review-card.component.css
+++ b/src/app/components/review-card/review-card.component.css
@@ -8,7 +8,7 @@ a {
 }
 
 .card {
-    margin: 20px 0px 0px 0px;
+    margin: 15px 0px 0px 0px;
 
     border: 0 solid #e7e7e7;
     border-radius: 5px;
@@ -93,4 +93,10 @@ a {
 
 .customer {
     font-size: 12px;
+}
+
+.agentName {
+    margin-left: 10px;
+    font-size: 14px;
+    align-self: center;
 }
