--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
+<ngx-loading-bar [includeSpinner]=false></ngx-loading-bar>
 <app-header></app-header>
 <app-side-nav></app-side-nav>
-<div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
+<div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">       
     <app-page-header></app-page-header>
     <app-breadcrumb></app-breadcrumb> 
     <div class="container-fluid">
