--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -10,39 +10,15 @@
             <th>#</th>
             <th>Name</th>
             <th>Score</th>
-            <th>Supervisor</th>
+            <!-- <th>Supervisor</th> -->
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>Ryan Gray</td>
-            <td>4.95</td>
-            <td>Josh Edwards</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Max Jacobson</td>
-            <td>4.45</td>
-            <td>Josh Edwards</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>John Andrews</td>
-            <td>4.05</td>
-            <td>Josh Edwards</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>Paul Woodhouse</td>
-            <td>3.95</td>
-            <td>Josh Edwards</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>Jordan Mefford</td>
-            <td>3.90</td>
-            <td>Josh Edwards</td>
+          <tr *ngFor="let user of leaderboard; let i = index">
+            <td>{{i + 1}}</td>
+            <td>{{user.user.firstName}} {{user.user.lastName}}</td>
+            <td>{{user.averageScore | number : '1.2-2' }}</td>
+            <!-- <td>Include supervisor here for admins</td> -->
           </tr>
         </tbody>
       </table>
