--- a/src/app/components/surveys/survey.component.html
+++ b/src/app/components/surveys/survey.component.html
@@ -10,5 +10,11 @@
     </div>
   </div>
   <hr>
-  <mat-paginator class="surveyCards" [length]="length" [pageIndex]="pageIndex" [pageSize]="pageSize" [pageSizeOptions]="[10, 25, 50, 100]" (page)="pageEvent = onPageEvent($event)"></mat-paginator>
+  <mat-paginator class="surveyCards" 
+    [length]="length" 
+    [pageIndex]="pageIndex" 
+    [pageSize]="pageSize" 
+    [pageSizeOptions]="[10, 25, 50, 100]" 
+    (page)="pageEvent = onPageEvent($event)">
+  </mat-paginator>
 </div>
